--- a/eam/common/generator/src/main/resources/templates/ext.js.vm
+++ b/eam/common/generator/src/main/resources/templates/ext.js.vm
@@ -189,7 +189,7 @@ layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','x
          * 对话框打开之前调用，如果返回 null 则不打开对话框
          * */
         beforeDialog:function (param){
-            param.title="覆盖对话框标题";
+            //param.title="覆盖对话框标题";
             return param;
         },
         /**
