--- a/eam/view/view-contract/src/main/resources/public/business/contract/contract/contract_form.html
+++ b/eam/view/view-contract/src/main/resources/public/business/contract/contract/contract_form.html
@@ -2,7 +2,7 @@
 /**
  * 合同 列表页 JS 脚本
  * @author 李方捷 , leefangjie@qq.com
- * @since 2021-12-10 17:05:41
+ * @since 2021-12-13 17:07:17
  */
  -->
  <!DOCTYPE html>
@@ -20,14 +20,13 @@
     <link rel="stylesheet" href="/assets/libs/toast/css/toast.css" type="text/css" th:href="'/assets/libs/toast/css/toast.css?'+${cacheKey}">
     <link rel="stylesheet" href="/assets/css/foxnic-web.css" th:href="'/assets/css/foxnic-web.css?'+${cacheKey}"/>
     <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
-    <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>    <link th:if(theme.ico!="null") rel="shortcut icon" th:href="${theme.ico}" type="image/vnd.microsoft.icon"> <link th:if(theme.ico!="null") rel="icon" th:href="theme.ico" type="image/vnd.microsoft.icon">
-    <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
+    <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
     <style>
         .layui-form-label {
-            width: 70px;
+            width: 80px;
         }
         .layui-input-block {
-            margin-left: 105px;
+            margin-left: 115px;
         }
     </style>
     <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
@@ -53,9 +52,9 @@
             <div class="layui-col-xs12 form-column" >
 
                     <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('合同抬头')}">合同抬头</div></div>
+                        <div class="layui-form-label "><div th:text="${lang.translate('合同抬头')}">合同抬头</div><div class="layui-required">*</div></div>
                         <div class="layui-input-block ">
-                            <input lay-filter="title" id="title" name="title" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('合同抬头') }" type="text" class="layui-input"  />
+                            <input lay-filter="title" id="title" name="title" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('合同抬头') }" type="text" class="layui-input"    lay-verify="|required"  />
                         </div>
                     </div>
 
@@ -92,16 +91,18 @@
              <!--开始：group 循环-->
             <div class="layui-col-xs6 form-column" >
 
+
                     <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('合同类型')}">合同类型</div></div>
+                        <div class="layui-form-label "><div th:text="${lang.translate('合同类型')}">合同类型</div><div class="layui-required">*</div></div>
                         <div class="layui-input-block ">
-                            <input lay-filter="type" id="type" name="type" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('合同类型') }" type="text" class="layui-input"  />
+                            <div id="type" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.contract.ContractType')}" extraParam="{}"></div>
                         </div>
                     </div>
 
+
                 
                     <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('状态')}">状态</div></div>
+                        <div class="layui-form-label "><div th:text="${lang.translate('合同状态')}">合同状态</div></div>
                         <div class="layui-input-block ">
                             <div id="contractStatus" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.contract.ContractStatus')}" extraParam="{}"></div>
                         </div>
@@ -116,10 +117,10 @@
                     </div>
 
                                     <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('归属部门')}">归属部门</div></div>
+                        <div class="layui-form-label "><div th:text="${lang.translate('归属部门')}">归属部门</div><div class="layui-required">*</div></div>
                         <div class="layui-input-block ">
-                            <input lay-filter="departmentId" id="departmentId" name="departmentId"  type="hidden" class="layui-input"   />
-                            <button id="departmentId-button" type="button" action-type="org-dialog" class="layui-btn   " style="width: 100%"> <i class='layui-icon layui-icon-search'></i> <span th:text="${lang.translate('请选择部门')}" th:default-label="${lang.translate('请选择部门')}">按钮文本</span></button>
+                            <input lay-filter="departmentId" id="departmentId" name="departmentId"  type="hidden" class="layui-input"    lay-verify="|required"   />
+                            <button id="departmentId-button" type="button" action-type="org-dialog" class="layui-btn   " style="width: 100%"> <i class='layui-icon layui-icon-search'></i> <span th:text="${lang.translate('请选择组织节点')}" th:default-label="${lang.translate('请选择组织节点')}">按钮文本</span></button>
                         </div>
                     </div>
 
@@ -127,7 +128,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('签订日期')}">签订日期</div></div>
                         <div class="layui-input-block ">
-                            <input input-type="date" lay-filter="signingDate" id="signingDate" name="signingDate"  autocomplete="off"  readonly  th:placeholder="${ lang.translate('请选择') +''+ lang.translate('签订日期') }" type="text" class="layui-input"   />
+                            <input input-type="date" lay-filter="signingDate" id="signingDate" name="signingDate"  autocomplete="off"  readonly  th:placeholder="${ lang.translate('请选择') +''+ lang.translate('签订日期') }" type="text" class="layui-input"    lay-verify=""   />
                         </div>
                     </div>
 
@@ -135,7 +136,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('结束日期')}">结束日期</div></div>
                         <div class="layui-input-block ">
-                            <input input-type="date" lay-filter="endDate" id="endDate" name="endDate"  autocomplete="off"  readonly  th:placeholder="${ lang.translate('请选择') +''+ lang.translate('结束日期') }" type="text" class="layui-input"   />
+                            <input input-type="date" lay-filter="endDate" id="endDate" name="endDate"  autocomplete="off"  readonly  th:placeholder="${ lang.translate('请选择') +''+ lang.translate('结束日期') }" type="text" class="layui-input"    lay-verify=""   />
                         </div>
                     </div>
 
@@ -146,7 +147,7 @@
 
 
                     <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('分类')}">分类</div></div>
+                        <div class="layui-form-label "><div th:text="${lang.translate('合同分类')}">合同分类</div><div class="layui-required">*</div></div>
                         <div class="layui-input-block ">
                             <div id="catalogCode" input-type="select" th:data="${dict.toArray('contract_catalog')}" extraParam="{}"></div>
                         </div>
@@ -164,7 +165,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('合同金额')}">合同金额</div></div>
                         <div class="layui-input-block ">
-                            <input lay-filter="amount" id="amount" name="amount" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('合同金额') }" type="text" class="layui-input"   autocomplete="off" input-type="number_input" integer="false" decimal="true" allow-negative="true" step="1.0"   scale="0" />
+                            <input lay-filter="amount" id="amount" name="amount" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('合同金额') }" type="text" class="layui-input"   autocomplete="off" input-type="number_input" integer="false" decimal="true" allow-negative="true" step="1.0"   scale="2" />
                         </div>
                     </div>
 
@@ -173,7 +174,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('生效日期')}">生效日期</div></div>
                         <div class="layui-input-block ">
-                            <input input-type="date" lay-filter="effectiveDate" id="effectiveDate" name="effectiveDate"  autocomplete="off"  readonly  th:placeholder="${ lang.translate('请选择') +''+ lang.translate('生效日期') }" type="text" class="layui-input"   />
+                            <input input-type="date" lay-filter="effectiveDate" id="effectiveDate" name="effectiveDate"  autocomplete="off"  readonly  th:placeholder="${ lang.translate('请选择') +''+ lang.translate('生效日期') }" type="text" class="layui-input"    lay-verify=""   />
                         </div>
                     </div>
 
@@ -181,7 +182,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('失效日期')}">失效日期</div></div>
                         <div class="layui-input-block ">
-                            <input input-type="date" lay-filter="expirationDate" id="expirationDate" name="expirationDate"  autocomplete="off"  readonly  th:placeholder="${ lang.translate('请选择') +''+ lang.translate('失效日期') }" type="text" class="layui-input"   />
+                            <input input-type="date" lay-filter="expirationDate" id="expirationDate" name="expirationDate"  autocomplete="off"  readonly  th:placeholder="${ lang.translate('请选择') +''+ lang.translate('失效日期') }" type="text" class="layui-input"    lay-verify=""   />
                         </div>
                     </div>
 
@@ -193,7 +194,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-5529-content">
+        <div class="layui-row form-row" id="random-6137-content">
 
              <!--开始：group 循环-->
             <div class="layui-col-xs12 form-column"  style="padding-top: 0px" >
@@ -223,24 +224,28 @@
              <!--开始：group 循环-->
             <div class="layui-col-xs6 form-column" >
 
+
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('资金流向')}">资金流向</div></div>
                         <div class="layui-input-block ">
-                            <input lay-filter="fundingDirection" id="fundingDirection" name="fundingDirection" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('资金流向') }" type="text" class="layui-input"  />
+                            <div id="fundingDirection" input-type="select" th:data="${dict.toArray('funding_direction')}" extraParam="{}"></div>
                         </div>
                     </div>
+
 
                 <!--结束：栏次内字段循环-->
             </div>
              <!--开始：group 循环-->
             <div class="layui-col-xs6 form-column" >
 
+
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('资金状态')}">资金状态</div></div>
                         <div class="layui-input-block ">
-                            <input lay-filter="fundingStatus" id="fundingStatus" name="fundingStatus" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('资金状态') }" type="text" class="layui-input"  />
+                            <div id="fundingStatus" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.contract.FundingStatus')}" extraParam="{}"></div>
                         </div>
                     </div>
+
 
                 <!--结束：栏次内字段循环-->
             </div>
@@ -287,9 +292,12 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
+    var SELECT_TYPE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.contract.ContractType')}]];
     var SELECT_CONTRACTSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.contract.ContractStatus')}]];
+    var SELECT_FUNDINGSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.contract.FundingStatus')}]];
+    var SELECT_FUNDINGDIRECTION_DATA = [[${dict.toArray('funding_direction')}]];
     var SELECT_CATALOGCODE_DATA = [[${dict.toArray('contract_catalog')}]];
-    var VALIDATE_CONFIG={};
+    var VALIDATE_CONFIG={"endDate":{"date":true,"labelInForm":"结束日期","inputType":"date_input"},"signingDate":{"date":true,"labelInForm":"签订日期","inputType":"date_input"},"departmentId":{"labelInForm":"归属部门","inputType":"button","required":true},"catalogCode":{"labelInForm":"合同分类","inputType":"select_box","required":true},"type":{"labelInForm":"合同类型","inputType":"select_box","required":true},"title":{"labelInForm":"合同抬头","inputType":"text_input","required":true},"effectiveDate":{"date":true,"labelInForm":"生效日期","inputType":"date_input"},"expirationDate":{"date":true,"labelInForm":"失效日期","inputType":"date_input"}};
     var AUTH_PREFIX="cont_contract";
 
 
