--- a/eam/view/view-contract/src/main/resources/public/business/contract/contract/contract_list.html
+++ b/eam/view/view-contract/src/main/resources/public/business/contract/contract/contract_list.html
@@ -2,7 +2,7 @@
 /**
  * 合同 列表页 JS 脚本
  * @author 李方捷 , leefangjie@qq.com
- * @since 2021-12-10 17:05:43
+ * @since 2021-12-13 17:07:19
  */
  -->
  <!DOCTYPE html>
@@ -20,8 +20,7 @@
     <link rel="stylesheet" href="/assets/libs/toast/css/toast.css" type="text/css" th:href="'/assets/libs/toast/css/toast.css?'+${cacheKey}">
     <link rel="stylesheet" href="/assets/css/foxnic-web.css" th:href="'/assets/css/foxnic-web.css?'+${cacheKey}">
     <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
-    <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>    <link th:if(theme.ico!="null") rel="shortcut icon" th:href="${theme.ico}" type="image/vnd.microsoft.icon"> <link th:if(theme.ico!="null") rel="icon" th:href="theme.ico" type="image/vnd.microsoft.icon">
-    <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
+    <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
     <style>
     </style>
     <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
@@ -39,7 +38,7 @@
                 <!-- 搜索输入区域 -->
                 <div class="layui-form toolbar search-inputs">
                     <!-- 主键 , id ,typeName=text_input, isHideInSearch=true -->
-                    <!-- 合同类型 , type ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 合同类型 , type ,typeName=select_box, isHideInSearch=true -->
                     <!-- 上级合同ID , parentId ,typeName=text_input, isHideInSearch=true -->
                     <!-- 交付物 , deliverables ,typeName=text_input, isHideInSearch=true -->
                     <!-- 交付地 , deliveryLocation ,typeName=text_input, isHideInSearch=true -->
@@ -47,10 +46,10 @@
                     <!-- 摘要信息 , summary ,typeName=text_area, isHideInSearch=true -->
                     <!-- 结束日期 , endDate ,typeName=date_input, isHideInSearch=true -->
                     <!-- 失效日期 , expirationDate ,typeName=date_input, isHideInSearch=true -->
-                    <!-- 资金流向 , fundingDirection ,typeName=text_input, isHideInSearch=true -->
-                    <!-- 分类 , catalogCode ,typeName=select_box, isHideInSearch=false -->
+                    <!-- 资金流向 , fundingDirection ,typeName=select_box, isHideInSearch=true -->
+                    <!-- 合同分类 , catalogCode ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('分类')}" class="search-label catalogCode-label">分类</span><span class="search-colon">:</span></div>
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('合同分类')}" class="search-label catalogCode-label">合同分类</span><span class="search-colon">:</span></div>
                         <div id="catalogCode" th:data="${dict.toArray('contract_catalog')}" style="width:140px" extraParam="{}"></div>
                     </div>
                     <!-- 合同编号 , contractNo ,typeName=text_input, isHideInSearch=false -->
@@ -73,21 +72,21 @@
                 </div>
                 <!-- 搜索输入区域 -->
                 <div class="layui-form toolbar search-inputs">
-                    <!-- 状态 , contractStatus ,typeName=select_box, isHideInSearch=false -->
+                    <!-- 合同状态 , contractStatus ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('状态')}" class="search-label contractStatus-label">状态</span><span class="search-colon">:</span></div>
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('合同状态')}" class="search-label contractStatus-label">合同状态</span><span class="search-colon">:</span></div>
                         <div id="contractStatus" th:data="${enum.toArray('com.dt.platform.constants.enums.contract.ContractStatus')}" style="width:140px" extraParam="{}"></div>
                     </div>
                     <!-- 归属部门 , departmentId ,typeName=button, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style=""><span th:text="${lang.translate('归属部门')}" class="search-label departmentId-label">归属部门</span><span class="search-colon">:</span></div>
-                            <input lay-filter="departmentId" id="departmentId" name="departmentId"  type="hidden" class="layui-input"   />
-                            <button id="departmentId-button" type="button" action-type="org-dialog" class="layui-btn layui-btn-primary   " style="width: 140px"> <i class='layui-icon layui-icon-search'></i> <span th:text="${lang.translate('请选择部门')}" th:default-label="${lang.translate('请选择部门')}">按钮文本</span></button>
+                            <input lay-filter="departmentId" id="departmentId" name="departmentId"  type="hidden" class="layui-input"    lay-verify="|required"   />
+                            <button id="departmentId-button" type="button" action-type="org-dialog" class="layui-btn layui-btn-primary   " style="width: 140px"> <i class='layui-icon layui-icon-search'></i> <span th:text="${lang.translate('请选择组织节点')}" th:default-label="${lang.translate('请选择组织节点')}">按钮文本</span></button>
                     </div>
-                    <!-- 资金状态 , fundingStatus ,typeName=text_input, isHideInSearch=false -->
+                    <!-- 资金状态 , fundingStatus ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style=""><span th:text="${lang.translate('资金状态')}" class="search-label fundingStatus-label">资金状态</span><span class="search-colon">:</span></div>
-                        <input id="fundingStatus" class="layui-input search-input" style="width: 140px" type="text" />
+                        <div id="fundingStatus" th:data="${enum.toArray('com.dt.platform.constants.enums.contract.FundingStatus')}" style="width:140px" extraParam="{}"></div>
                     </div>
                     <!-- 生效日期 , effectiveDate ,typeName=date_input, isHideInSearch=false -->
                     <div class="search-unit">
@@ -137,13 +136,17 @@
     <button th:if="${perm.checkAuth('cont_contract:delete')}" class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button " lay-event="del" th:text="${lang.translate('删除')}" data-id="{{d.id}}">删除</button>
 
 
+    <button class="layui-btn layui-btn-xs layui-btn-primary layui-border-blue" lay-event="ops-more" data-id="{{d.id}}"><span th:text="${lang.translate('更多')}">更多</span><i class="layui-icon layui-icon-down"></i></button>
 </script>
 
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
-    var SELECT_CONTRACTSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.contract.ContractStatus')}]];
+    var SELECT_TYPE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.contract.ContractType')}]];
     var SELECT_CATALOGCODE_DATA = [[${dict.toArray('contract_catalog')}]];
+    var SELECT_CONTRACTSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.contract.ContractStatus')}]];
+    var SELECT_FUNDINGSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.contract.FundingStatus')}]];
+    var SELECT_FUNDINGDIRECTION_DATA = [[${dict.toArray('funding_direction')}]];
     var AUTH_PREFIX="cont_contract";
 
 
