--- a/eam/common/generator/src/main/resources/templates/ext.js.vm
+++ b/eam/common/generator/src/main/resources/templates/ext.js.vm
@@ -13,6 +13,9 @@ layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','x
     var admin = layui.admin,settings = layui.settings,form = layui.form,upload = layui.upload,laydate= layui.laydate,dropdown=layui.dropdown;
     table = layui.table,layer = layui.layer,util = layui.util,fox = layui.foxnic,xmSelect = layui.xmSelect,foxup=layui.foxnicUpload;
 
+    //模块基础路径
+    const moduleURL="#(moduleURL)";
+
     //列表页的扩展
     var list={
         /**
