--- a/eam/common/generator/src/main/resources/templates/list.js.vm
+++ b/eam/common/generator/src/main/resources/templates/list.js.vm
@@ -138,6 +138,8 @@ function ListPage() {
 							} else {
 								layer.msg(fox.translate('数据导入失败')+"!");
 							}
+							// 是否执行后续逻辑：错误提示
+							return false;
 						}
 					}:false
 				}
