--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_data_permissions/asset_data_permissions_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_data_permissions/asset_data_permissions_list.html
@@ -122,6 +122,9 @@
     var RADIO_POSITIONAUTHORITYENABLE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusEnableEnum')}]];
     var AUTH_PREFIX="eam_asset_data_permissions";
 
+    var RADIO_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusEnableEnum')}]];
+
+    
     // 资产分类数据
     var CATEGORY_CODE = [[${categoryCode}]] ;
 
