--- a/eam/view/view-eam/src/main/resources/public/business/eam/category_finance/category_finance_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/category_finance/category_finance_form.html
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="/assets/css/admin.css"/>
     <link rel="stylesheet" href="/assets/css/foxnic-web.css">
     <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
+    <link th:if(theme.ico!="null") rel="shortcut icon" th:href="${theme.ico}" type="image/vnd.microsoft.icon">
+    <link th:if(theme.ico!="null") rel="icon" th:href="theme.ico" type="image/vnd.microsoft.icon">
+    <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
+
 </head>
 
 <body style="overflow-y: hidden">
