--- a/eam/view/view-contract/src/main/resources/public/business/contract/contract/contract_form.html
+++ b/eam/view/view-contract/src/main/resources/public/business/contract/contract/contract_form.html
@@ -2,7 +2,7 @@
 /**
  * 合同 列表页 JS 脚本
  * @author 李方捷 , leefangjie@qq.com
- * @since 2021-12-14 16:37:15
+ * @since 2021-12-20 16:12:42
  */
  -->
  <!DOCTYPE html>
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="/assets/css/admin.css" th:href="'/assets/css/admin.css?'+${cacheKey}"/>
     <link rel="stylesheet" href="/assets/libs/toast/css/toast.css" type="text/css" th:href="'/assets/libs/toast/css/toast.css?'+${cacheKey}">
     <link rel="stylesheet" href="/assets/css/foxnic-web.css" th:href="'/assets/css/foxnic-web.css?'+${cacheKey}"/>
-    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
+    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="/assets/libs/material-design-webfont/css/material-design-icons-min.css" rel="stylesheet">
     <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
     <style>
         .layui-form-label {
@@ -194,7 +195,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-3940-content">
+        <div class="layui-row form-row" id="random-2439-content">
 
              <!--开始：group 循环-->
             <div class="layui-col-xs12 form-column"  style="padding-top: 0px" >
