--- a/eam/view/view-contract/src/main/resources/public/business/contract/contract/contract_list.html
+++ b/eam/view/view-contract/src/main/resources/public/business/contract/contract/contract_list.html
@@ -2,7 +2,7 @@
 /**
  * 合同 列表页 JS 脚本
  * @author 李方捷 , leefangjie@qq.com
- * @since 2021-12-14 16:37:17
+ * @since 2021-12-20 16:12:42
  */
  -->
  <!DOCTYPE html>
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="/assets/css/admin.css" th:href="'/assets/css/admin.css?'+${cacheKey}"/>
     <link rel="stylesheet" href="/assets/libs/toast/css/toast.css" type="text/css" th:href="'/assets/libs/toast/css/toast.css?'+${cacheKey}">
     <link rel="stylesheet" href="/assets/css/foxnic-web.css" th:href="'/assets/css/foxnic-web.css?'+${cacheKey}">
-    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
+    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="/assets/libs/material-design-webfont/css/material-design-icons-min.css" rel="stylesheet">
     <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
     <style>
     </style>
@@ -55,7 +56,7 @@
                     <!-- 合同编号 , contractNo ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style=""><span th:text="${lang.translate('合同编号')}" class="search-label contractNo-label">合同编号</span><span class="search-colon">:</span></div>
-                        <input id="contractNo" class="layui-input search-input" style="width: 140px" type="text" />
+                        <input id="contractNo" class="layui-input search-input" style="width: 160px" type="text" />
                     </div>
                     <!-- 合同抬头 , title ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
@@ -81,7 +82,7 @@
                     <div class="search-unit">
                         <div class="search-label-div" style=""><span th:text="${lang.translate('归属部门')}" class="search-label departmentId-label">归属部门</span><span class="search-colon">:</span></div>
                             <input lay-filter="departmentId" id="departmentId" name="departmentId"  type="hidden" class="layui-input"    lay-verify="|required"   />
-                            <button id="departmentId-button" type="button" action-type="org-dialog" class="layui-btn layui-btn-primary   " style="width: 140px"> <i class='layui-icon layui-icon-search'></i> <span th:text="${lang.translate('请选择组织节点')}" th:default-label="${lang.translate('请选择组织节点')}">按钮文本</span></button>
+                            <button id="departmentId-button" type="button" action-type="org-dialog" class="layui-btn layui-btn-primary   " style="width: 160px"> <i class='layui-icon layui-icon-search'></i> <span th:text="${lang.translate('请选择组织节点')}" th:default-label="${lang.translate('请选择组织节点')}">按钮文本</span></button>
                     </div>
                     <!-- 资金状态 , fundingStatus ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
