--- a/eam/view/view-contract/src/main/resources/public/business/contract/contract_signer/contract_signer_form.html
+++ b/eam/view/view-contract/src/main/resources/public/business/contract/contract_signer/contract_signer_form.html
@@ -2,7 +2,7 @@
 /**
  * 合同签订方 列表页 JS 脚本
  * @author 李方捷 , leefangjie@qq.com
- * @since 2021-12-08 17:04:16
+ * @since 2021-12-20 16:55:10
  */
  -->
  <!DOCTYPE html>
@@ -19,9 +19,16 @@
     <link rel="stylesheet" href="/assets/css/admin.css" th:href="'/assets/css/admin.css?'+${cacheKey}"/>
     <link rel="stylesheet" href="/assets/libs/toast/css/toast.css" type="text/css" th:href="'/assets/libs/toast/css/toast.css?'+${cacheKey}">
     <link rel="stylesheet" href="/assets/css/foxnic-web.css" th:href="'/assets/css/foxnic-web.css?'+${cacheKey}"/>
-    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
+    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="/assets/libs/material-design-webfont/css/material-design-icons-min.css" rel="stylesheet">
     <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
     <style>
+        .layui-form-label {
+            width: 80px;
+        }
+        .layui-input-block {
+            margin-left: 115px;
+        }
     </style>
     <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
 </head>
@@ -31,110 +38,107 @@
 
     <form id="data-form" lay-filter="data-form" class="layui-form model-form" style="display:none">
 
+        <input name="id" id="id"  type="hidden"/>
 
          <!--开始：group 循环-->
 
 
+        <fieldset class="layui-elem-field layui-field-title form-group-title" id="signer-info-fieldset">
+            <legend>签订方</legend>
+        </fieldset>
 
-        <div class="layui-row form-row">
+        <div class="layui-row form-row" id="signer-info-content">
 
              <!--开始：group 循环-->
-            <div class="layui-col-xs12 form-column">
+            <div class="layui-col-xs12 form-column" >
 
-                    <div class="layui-form-item" style="display: none">
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('id')}">id</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="id" id="id" name="id" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('id') }" type="text" class="layui-input"  />
+
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('签订方')}">签订方</div><div class="layui-required">*</div></div>
+                        <div class="layui-input-block ">
+                            <div id="alias" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.contract.SignerAlias')}" extraParam="{}"></div>
                         </div>
                     </div>
 
-                                    <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('合同ID')}">合同ID</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="contractId" id="contractId" name="contractId" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('合同ID') }" type="text" class="layui-input"  />
-                        </div>
-                    </div>
 
                 
-                    <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('显示顺序')}">显示顺序</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="sort" id="sort" name="sort" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('显示顺序') }" type="text" class="layui-input"   autocomplete="off" input-type="number_input" integer="true" decimal="false" allow-negative="true" step="1.0"   scale="0" />
-                        </div>
+                <div class="layui-form-item" >
+                    <div class="layui-form-label "><div th:text="${lang.translate('类型')}">类型</div><div class="layui-required">*</div></div>
+                    <div class="layui-input-block ">
+                        <input input-type="radio" type="radio" name="type" lay-filter="type" th:each="e,stat:${enum.toArray('com.dt.platform.constants.enums.contract.SignerType')}" th:value="${e.code}" th:title="${e.text}" th:checked="${(e.code=='' || stat.index==-1)?'yes':'no'}">
                     </div>
+                </div>
 
 
                                     <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('别名')}">别名</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="alias" id="alias" name="alias" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('别名') }" type="text" class="layui-input"  />
-                        </div>
-                    </div>
-
-                                    <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('签订方类型')}">签订方类型</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="type" id="type" name="type" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('签订方类型') }" type="text" class="layui-input"  />
+                        <div class="layui-form-label "><div th:text="${lang.translate('唯一代码')}">唯一代码</div><div class="layui-required">*</div></div>
+                        <div class="layui-input-block ">
+                            <input lay-filter="identityCdoe" id="identityCdoe" name="identityCdoe" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('唯一代码') }" type="text" class="layui-input"    lay-verify="|required"  />
                         </div>
                     </div>
 
                                     <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('唯一代码')}">唯一代码</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="identityCdoe" id="identityCdoe" name="identityCdoe" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('唯一代码') }" type="text" class="layui-input"  />
+                        <div class="layui-form-label "><div th:text="${lang.translate('名称')}">名称</div><div class="layui-required">*</div></div>
+                        <div class="layui-input-block ">
+                            <input lay-filter="name" id="name" name="name" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('名称') }" type="text" class="layui-input"    lay-verify="|required"  />
                         </div>
                     </div>
 
                                     <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('名称')}">名称</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="name" id="name" name="name" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('名称') }" type="text" class="layui-input"  />
-                        </div>
-                    </div>
-
-                                    <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('座机号码')}">座机号码</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="landlineNumber" id="landlineNumber" name="landlineNumber" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('座机号码') }" type="text" class="layui-input"  />
-                        </div>
-                    </div>
-
-                                    <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('传真号码')}">传真号码</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="faxNumber" id="faxNumber" name="faxNumber" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('传真号码') }" type="text" class="layui-input"  />
-                        </div>
-                    </div>
-
-                                    <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('地址')}">地址</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
+                        <div class="layui-form-label "><div th:text="${lang.translate('地址')}">地址</div></div>
+                        <div class="layui-input-block ">
                             <input lay-filter="address" id="address" name="address" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('地址') }" type="text" class="layui-input"  />
                         </div>
                     </div>
 
-                                    <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('联系人姓名')}">联系人姓名</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
+                <!--结束：栏次内字段循环-->
+            </div>
+            <!--结束：栏次输入框循环-->
+        </div>
+         <!--开始：group 循环-->
+
+
+        <fieldset class="layui-elem-field layui-field-title form-group-title" id="contact-info-fieldset">
+            <legend>联系方式</legend>
+        </fieldset>
+
+        <div class="layui-row form-row" id="contact-info-content">
+
+             <!--开始：group 循环-->
+            <div class="layui-col-xs6 form-column" >
+
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('联系人姓名')}">联系人姓名</div></div>
+                        <div class="layui-input-block ">
                             <input lay-filter="contactPerson" id="contactPerson" name="contactPerson" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('联系人姓名') }" type="text" class="layui-input"  />
                         </div>
                     </div>
 
                                     <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('联系人手机')}">联系人手机</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
+                        <div class="layui-form-label "><div th:text="${lang.translate('座机号码')}">座机号码</div></div>
+                        <div class="layui-input-block ">
+                            <input lay-filter="landlineNumber" id="landlineNumber" name="landlineNumber" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('座机号码') }" type="text" class="layui-input"  />
+                        </div>
+                    </div>
+
+                <!--结束：栏次内字段循环-->
+            </div>
+             <!--开始：group 循环-->
+            <div class="layui-col-xs6 form-column" >
+
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('联系人手机')}">联系人手机</div></div>
+                        <div class="layui-input-block ">
                             <input lay-filter="contactPhone" id="contactPhone" name="contactPhone" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('联系人手机') }" type="text" class="layui-input"  />
                         </div>
                     </div>
 
-                
-                    <div class="layui-form-item" >
-                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('备注')}">备注</div></div>
-                    <div class="layui-input-block layui-input-block-c1">
-                        <textarea lay-filter="notes" id="notes" name="notes" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('备注') }" class="layui-textarea" style="height: 120px" ></textarea>
+                                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('传真号码')}">传真号码</div></div>
+                        <div class="layui-input-block ">
+                            <input lay-filter="faxNumber" id="faxNumber" name="faxNumber" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('传真号码') }" type="text" class="layui-input"  />
+                        </div>
                     </div>
-                </div>
-
 
                 <!--结束：栏次内字段循环-->
             </div>
@@ -161,7 +165,9 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
-    var VALIDATE_CONFIG={};
+    var SELECT_ALIAS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.contract.SignerAlias')}]];
+    var RADIO_TYPE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.contract.SignerType')}]];
+    var VALIDATE_CONFIG={"identityCdoe":{"labelInForm":"唯一代码","inputType":"text_input","required":true},"name":{"labelInForm":"名称","inputType":"text_input","required":true},"alias":{"labelInForm":"签订方","inputType":"select_box","required":true},"type":{"labelInForm":"类型","inputType":"radio_box","required":true}};
     var AUTH_PREFIX="cont_contract_signer";
 
 
