--- a/eam/common/generator/src/main/resources/templates/form.html.vm
+++ b/eam/common/generator/src/main/resources/templates/form.html.vm
@@ -95,7 +95,7 @@
         <div class="layui-row form-row" id="#(g.elId)-content">
 
             #for(col : g.columns) <!--开始：group 循环-->
-            <div class="layui-col-xs#(g.span) form-column" #if(g.title==null) style="padding-top: 0px" #end>
+            <div class="layui-col-xs#(g.span) form-column" #if(g.title==null && g.columns.size()>1) style="padding-top: 0px" #end>
 
                 #for(f : col)
                 #if(f.typeName.equals("upload"))
