--- a/eam/view/view-contract/src/main/resources/public/business/contract/contract_attachment/contract_attachment_list.html
+++ b/eam/view/view-contract/src/main/resources/public/business/contract/contract_attachment/contract_attachment_list.html
@@ -2,7 +2,7 @@
 /**
  * 合同附件 列表页 JS 脚本
  * @author 李方捷 , leefangjie@qq.com
- * @since 2021-12-08 17:04:16
+ * @since 2021-12-23 16:54:52
  */
  -->
  <!DOCTYPE html>
@@ -19,46 +19,40 @@
     <link rel="stylesheet" href="/assets/css/admin.css" th:href="'/assets/css/admin.css?'+${cacheKey}"/>
     <link rel="stylesheet" href="/assets/libs/toast/css/toast.css" type="text/css" th:href="'/assets/libs/toast/css/toast.css?'+${cacheKey}">
     <link rel="stylesheet" href="/assets/css/foxnic-web.css" th:href="'/assets/css/foxnic-web.css?'+${cacheKey}">
-    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
-    <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>    <link th:if(theme.ico!="null") rel="shortcut icon" th:href="${theme.ico}" type="image/vnd.microsoft.icon"> <link th:if(theme.ico!="null") rel="icon" th:href="theme.ico" type="image/vnd.microsoft.icon">
-    <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
+    <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="/assets/libs/material-design-webfont/css/material-design-icons-min.css" rel="stylesheet">
+    <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
     <style>
+        .layui-card-body .layui-table {
+            margin:0px;
+        }
     </style>
     <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
 </head>
 
 <body style="overflow-y: hidden">
 
-<div class="layui-card">
+<div class="layui-card-no-shadow ">
 
-    <div class="layui-card-body" style="">
+    <div class="layui-card-body" style="padding:0px">
 
-        <div class="search-bar" style="">
+        <div class="search-bar" style=" display: none; ">
 
             <div class="search-input-rows" style="opacity: 0">
                 <!-- 搜索输入区域 -->
                 <div class="layui-form toolbar search-inputs">
-                    <!-- 主键 , id ,typeName=text_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('主键')}" class="search-label id-label">主键</span><span class="search-colon">:</span></div>
-                        <input id="id" class="layui-input search-input" style="width: 140px" type="text" />
-                    </div>
-                    <!-- 所有者ID , ownerId ,typeName=text_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('所有者ID')}" class="search-label ownerId-label">所有者ID</span><span class="search-colon">:</span></div>
-                        <input id="ownerId" class="layui-input search-input" style="width: 140px" type="text" />
-                    </div>
-                    <!-- 所有者类型 , ownerType ,typeName=text_input, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('所有者类型')}" class="search-label ownerType-label">所有者类型</span><span class="search-colon">:</span></div>
-                        <input id="ownerType" class="layui-input search-input" style="width: 140px" type="text" />
-                    </div>
-                    <!-- 附件类型 , type ,typeName=text_input, isHideInSearch=false -->
+                    <!-- 主键 , id ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 所有者ID , ownerId ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 所有者类型 , ownerType ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 附件类型 , type ,typeName=radio_box, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style=""><span th:text="${lang.translate('附件类型')}" class="search-label type-label">附件类型</span><span class="search-colon">:</span></div>
-                        <input id="type" class="layui-input search-input" style="width: 140px" type="text" />
+
+
+                        <div id="type" th:data="${enum.toArray('com.dt.platform.constants.enums.contract.AttachmentType')}" style="width:140px"></div>
+
                     </div>
-                    <!-- 文件ID , fileId ,typeName=text_input, isHideInSearch=false -->
+                    <!-- 文件ID , fileId ,typeName=upload, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style=""><span th:text="${lang.translate('文件ID')}" class="search-label fileId-label">文件ID</span><span class="search-colon">:</span></div>
                         <input id="fileId" class="layui-input search-input" style="width: 140px" type="text" />
@@ -68,7 +62,7 @@
                         <div class="search-label-div" style=""><span th:text="${lang.translate('附件名称')}" class="search-label name-label">附件名称</span><span class="search-colon">:</span></div>
                         <input id="name" class="layui-input search-input" style="width: 140px" type="text" />
                     </div>
-                    <!-- 备注 , notes ,typeName=text_input, isHideInSearch=false -->
+                    <!-- 备注 , notes ,typeName=text_area, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style=""><span th:text="${lang.translate('备注')}" class="search-label notes-label">备注</span><span class="search-colon">:</span></div>
                         <input id="notes" class="layui-input search-input" style="width: 140px" type="text" />
@@ -85,7 +79,7 @@
             </div>
         </div>
 
-        <div style="margin-top: 42px ">
+        <div style="margin-top: 0px ">
             <table class="layui-table" id="data-table" lay-filter="data-table"></table>
         </div>
 
@@ -115,12 +109,14 @@
 
     <button th:if="${perm.checkAuth('cont_contract_attachment:delete')}" class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button " lay-event="del" th:text="${lang.translate('删除')}" data-id="{{d.id}}">删除</button>
 
+    <button class="layui-btn layui-btn-xs " lay-event="download" th:text="${lang.translate('下载')}" data-id="{{d.id}}">下载</button>
 
 </script>
 
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
+    var RADIO_TYPE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.contract.AttachmentType')}]];
     var AUTH_PREFIX="cont_contract_attachment";
 
 
